<resources>
    <string name="app_name">Мониторинг пастбищ</string>
    <string name="title_activity_maps">Map</string>
    <string name="dry_biomass_info">Внимание!\nСухую биомассу нужно взвешивать только после полного высушивания, через 15-20 дней с момента сбора влажной биомассы</string>
    <string name="title_about">Разработка и выпуск мобильного приложения "мониторинг пастбищ" осуществлен в рамках проекта  «Сохранение биоразнообразия и сокращение бедности с привлечением местных сообществ к управлению орехоплодовыми лесами и пастбищами», реализуемый Deutsche Gesellschaft für Internationale Zusammenarbeit (GIZ)  GmbH (Германским обществом по международному сотрудничеству) по поручению BMZ (Федерального министерства экономического сотрудничества и развития правительства Германии).\n\nСодержание информации в приложении является исключительной ответственностью авторов и может не отражать официальное мнение GIZ.\n\nМобильное приложение разработано Общественным Фондом" САМР Алатоо" на базе существующего приложения LandPKS при технической поддержке ОсОО "Интерсофт ЛТД"</string>
    <string name="contacts">Контактные данные:</string>
    <string name="info_camp">ОФ СAMP Aлатоо\nКыргызская Республика,\nг. Бишкек, пер. Уфимский, 3.\n+996 312 90 97 03\n\n<a href="https://www.camp.kg/">www.camp.kg</a></string>
    <string name="developer">Технический разработчик:</string>
    <string name="about_app">О приложении</string>
    <string name="wet_biomass">Влажная биомасса</string>
    <string name="dry_biomass">Сухая биомасса</string>
    <string name="new_value">Новая запись</string>
    <string name="plot_name">Название участка</string>
    <string name="pasture_name">Название пастбища</string>
    <string name="pasture_region">Название области</string>
    <string name="pasture_district">Название района</string>

    <string name="pasture_village">Айыл окмоту</string>

    <string name="location">Координаты</string>
    <string name="point_desc">Описание точки</string>
    <string name="pasture_desc">Описание участка</string>
    <string name="plants">Растения</string>
    <string name="trees">Деревья и кустарники</string>

    <string name="edit_mode">Редактирование</string>
    <string name="report">Отчетность</string>
    <string name="harvest">Урожайность</string>
    <string name="instruction">Инструкция</string>
    <string name="map">Карта</string>
    <string name="user_profile">Профиль</string>
    <string name="plant_label">Растительный покров</string>
    <string name="cattle_pasture">Выпас скота</string>
    <string name="cattle_type">Вид скота</string>
    <string name="save">Сохранить</string>
    <string name="cows"> Коровы,</string>
    <string name="sheeps"> Овцы и козы,</string>
    <string name="horses"> Лошади,</string>
    <string name="yaks"> Яки,</string>

    <string name="cows_valid">Коровы</string>
    <string name="sheeps_valid">Овцы и козы</string>
    <string name="horses_valid">Лошади</string>
    <string name="yaks_valid">Яки</string>
    <string name="soil_color">Цвет верхнего слоя почвы</string>
    <string name="erossion_degree">Степень эрозии почвы</string>

    <string name="soil_texture">Текстура почвы</string>
    <string name="glina">Глина</string>
    <string name="suglinok">Суглинок</string>
    <string name="suspes">Супесь</string>
    <string name="pesok">Песок</string>
    <string name="il">Ил</string>
    <string name="small">Слабокаменистые</string>
    <string name="medium">Среднекаменистые</string>
    <string name="large">Сильнокаменистые</string>
    <string name="ex_large">Очень сильнокаменистые</string>
    <string name="sign_in_safe">Вход для зарегистрированного \nпользователя</string>
    <string name="next">Далее</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="choose_lang">Выберите язык</string>
    <string name="analyse_pasture">Сбор и анализ данных о\nсостоянии пастбищ</string>
    <string name="developed">Разработано</string>
    <string name="owner">Исполнитель</string>
    <string name="exit">Выход</string>
    <string name="add_photo">Добавить фото</string>
    <string name="wet_biomass_in_gramm">Влажная биомасса в граммах/м2</string>
    <string name="dry_biomass_in_gram">Сухая биомасса в граммах/м2</string>
    <string name="level_soil">Степень каменистости почв</string>
    <string name="_10_n">Менее 10%\nСлабокаменистые</string>
    <string name="_10_20_n">10-20%\nСреднекаменистые</string>
    <string name="_20_40_n">20-40%\nСильнокаменистые</string>
    <string name="_40_n">Больше 40%\nОчень сильнокаменистые</string>
    <string name="title">Название</string>
    <string name="eaten_biomass">Поедаемая биомасса в граммах/м2</string>
    <string name="not_eaten_biomass">Не поедаемая биомасса в граммах/м2</string>
    <string name="gray">Серая</string>
    <string name="black">Черная</string>
    <string name="white">Белая</string>
    <string name="yellow">Желтая</string>
    <string name="red">Красная</string>
    <string name="brown">Коричневая</string>

    <string name="no_pastures">Совсем нет</string>
    <string name="little">Немного</string>
    <string name="intensively">Интенсивно</string>
    <string name="temperately">Умеренно</string>

    <string name="name">Имя:</string>
    <string name="lang">Язык:</string>
    <string name="change_picture">Сменить фото</string>
    <string name="capture">Сфоторафировать</string>
    <string name="from_gallery">Выбрать фото</string>
    <string name="pasture_monitoring">Мониторинг пастбищ</string>
    <string name="login_witout_auth">Войти без регистрации</string>
    <string name="no">Нет</string>
    <string name="bit">Мало</string>
    <string name="few">Несколько</string>
    <string name="much">Много</string>
    <string name="gullies">Промоины</string>
    <string name="pedestals">Пьедесталы</string>
    <string name="animal_paths">Скотные тропинки</string>
    <string name="bare_areas">Голые участки</string>
    <string name="point_indicator">Укажите индикатор</string>
    <string name="value">Значение</string>
    <string name="direction">Направление</string>
    <string name="choose_direction">Выберите направление</string>
    <string name="north">Север</string>
    <string name="west">Запад</string>
    <string name="east">Восток</string>
    <string name="south">Юг</string>
    <string name="distance">Расстояние</string>
    <string name="choose_distance">Выберите расстояние</string>
    <string name="indicators">Растительность</string>
    <string name="choose_indicators">Выберите индикаторы с помощью измерительной палки</string>
    <string name="bare_place">Голая земля</string>
    <string name="bush">Кустарник</string>
    <string name="eaten_plant">Поедаемое растение</string>
    <string name="non_eaten_plant">Не поедаемое растение</string>
    <string name="plant_base">Основа растений</string>
    <string name="decline">Опад</string>
    <string name="stone">Камень</string>
    <string name="plant_high">Высота растительности</string>
    <string name="average_height">Средняя высота</string>
    <string name="till_10_sm">До 10 см</string>
    <string name="more_50_sm">Более 50 см</string>
    <string name="login">Войти</string>
    <string name="organization">Организация</string>
    <string name="post">Должность</string>
    <string name="email">Электронный адрес</string>
    <string name="date">Дата регистрации</string>
    <string name="phone">Номер телефона</string>
    <string name="five_metrs">5 метров</string>
    <string name="ten_metrs">10 метров</string>
    <string name="fifteen_metrs">15 метров</string>
    <string name="twenty_metrs">20 метров</string>
    <string name="twenty_five_metrs">25 метров</string>
    <string name="harvest_dynamic">Динамика урожайности пастбищного участка, гр/м2</string>
    <string name="wet">Влажное</string>
    <string name="dry">Сухое</string>
    <string name="eaten">Поедаемые</string>
    <string name="non_eaten">Непоедаемые</string>

    <string name="gps_disabled_message">Для полноценной работы приложения нужно включить GPS</string>
    <string name="enable">Включить</string>
    <string name="cancel">Отмена</string>
    <string name="pdf_instruction">pastbishe_RU.pdf</string>
    <string name="search">Поиск</string>

    <string name="harverst_camera_description">Разместите камеру на 1 м2 кв</string>
    <string name="gallery">Галерея</string>
    <string name="list">Список</string>
    <string name="create_remember">Создать напоминание</string>
    <string name="signin_existing_or_register">Войдите в существующий аккаунт \nили зарегистрируйтесь</string>
    <string name="enter_or_register">Войти / Зарегистрироваться</string>
    <string name="info_developer">Деннис Санне ОсОО «ИнтерсофтЛТД» +996 312 90 97 03  <a href="https://www.onoi.kg/">www.onoi.kg</a></string>
    <string name="podskazka_about_app">Подсказка: Для использования карты без интернета откройте ее один раз с интернетом и данные сохранятся</string>
    <string name="no_internet">Нет интернета!</string>
    <string name="cancel_txt">Отмена</string>
    <string name="load_pdf_reader">Подсказка: Для использования карты без интернета откройте ее один раз с интернетом и данные сохранятся</string>
    <string name="synchronization">Синхронизация данных</string>
    <string name="open">Открыть</string>
    <string name="first_enter_internet_is_required">Для первого входа необходимо интернет соединение</string>
    <string name="need_permission">Для использования данного функционала необходимо соответствующее разрешение.</string>
    <string name="updated">Обновлено</string>
    <string name="are_you_sure_to_exit">Вы действительно хотите выйти? Все несохраненные данные будут потеряны или вы можете сохранить в черновик.</string>
    <string name="choose_region_or_state">Выберите сначала область/район</string>
    <string name="choose_region">Выберите сначала область</string>
    <string name="input_indicators">Индикаторы</string>
    <string name="yes">Да</string>
    <string name="are_you_sure_to_delete">Вы действительно хотите удалить запись?</string>
    <string name="wet_cant_be_more_than_dry">Влажная масса не может быть меньше сухой массы!</string>
    <string name="dry_cant_be_more_than_wet">Сухая масса не может быть больше влажной массы!</string>
    <string name="error">Ошибка</string>
    <string name="draft">Черновик</string>
    <string name="draft_saved">Сохранено как черновик</string>
    <string name="draft_text">Черновик</string>
    <string name="success">Успешно</string>
    <string name="input_txt">Введите</string>
    <string name="choose">Выберите</string>
    <string name="add_txt">Добавьте</string>
    <string name="you_want_to_exist">Вы действительно хотите выйти из приложения?</string>

    <string name="not_observe">0</string>
    <string name="ten">10</string>
    <string name="thirty">30</string>
    <string name="fifty">50</string>
    <string name="seventy">70</string>
    <string name="ninety">90</string>

    <string name="dotOnCard">Точка на карте</string>

    <string name="wait_loading">Подождите...загрузка</string>
    <string name="email_error">Поле не может быть пустым</string>
    <string name="enter_valid_email">Пожалуйста, введите действительный адрес электронной почты</string>
    <string name="no_data">Нет добавленных данных</string>


</resources>
