<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reports.report_types.ReportTypesActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:elevation="5dp"
            app:navigationIcon="@drawable/ic_chevron_left_black_24dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <kg.forestry.ui.core.SelectView
        android:id="@+id/five_metrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lable="@string/five_metrs"
        app:title="" />
    <kg.forestry.ui.core.SelectView
        android:id="@+id/ten_metrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lable="@string/ten_metrs"
        app:title="" />
    <kg.forestry.ui.core.SelectView
        android:id="@+id/fifteen_metrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lable="@string/fifteen_metrs"
        app:title="" />
    <kg.forestry.ui.core.SelectView
        android:id="@+id/twenty_metrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lable="@string/twenty_metrs"
        app:title="" />
    <kg.forestry.ui.core.SelectView
        android:id="@+id/twenty_five_metrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lable="@string/twenty_five_metrs"
        app:title="" />

</LinearLayout>