<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:elevation="5dp"
            app:navigationIcon="@drawable/ic_chevron_left_black_24dp" />
    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/btn_next"
        style="@style/AppTheme.Button.Round.Blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <kg.core.custom.MarkImageTextButton
            android:id="@+id/btn_cows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:custom_width="500"
            android:src="@drawable/cow"
            app:lable="@string/cows_valid" />

        <kg.core.custom.MarkImageTextButton
            android:id="@+id/btn_sheeps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:custom_width="500"
            android:src="@drawable/sheep"
            app:lable="@string/sheeps_valid" />

        <kg.core.custom.MarkImageTextButton
            android:id="@+id/btn_horses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:custom_width="500"
            android:src="@drawable/horse"
            app:lable="@string/horses_valid" />

        <kg.core.custom.MarkImageTextButton
            android:id="@+id/btn_yaks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:custom_width="500"
            android:src="@drawable/yak"
            app:lable="@string/yaks_valid" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>